Renamed project to more appropriate name and adjusted in titles on front-end

--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DataStructureTesting</title>
+    <title>@ViewData["Title"] - Runtime Analyzer</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DataStructureTesting</a>
+        <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark bg-dark border-bottom mb-3">
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Run-time Analyzer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <span>Data Structure & Algorithm Testing - Developed by Andrew Welch</span>
+            <span>Data Structure & Algorithm Run-time analyzer - Developed by Andrew Welch and Joe Reiter</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
