Add preliminary front-end changes

--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -11,18 +11,18 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark bg-dark border-bottom mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Run-time Analyzer</a>
+                <a class="navbar-brand d-md-none" asp-area="" asp-controller="Home" asp-action="Index">Run-time Analyzer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                     </ul>
                 </div>
@@ -36,8 +36,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            <span>Data Structure & Algorithm Run-time analyzer - Developed by Andrew Welch and Joe Reiter</span>
+        <div class="container-fluid text-right">
+            <span>Developed by Andrew Welch and Joe Reiter</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
