--- a/DataStructureTesting/Views/Home/Index.cshtml
+++ b/DataStructureTesting/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-
+<div class="row">
+    <div class="col-12 text-center">
+        <h1 class="display-4 text-white">Welcome</h1>
+    </div>
 </div>
