--- a/DataStructureTesting/wwwroot/css/site.css
+++ b/DataStructureTesting/wwwroot/css/site.css
@@ -9,8 +9,13 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: dodgerblue;
 }
+
+    a:hover {
+        color: dodgerblue;
+        text-decoration: underline;
+    }
 
 .btn-primary {
   color: #fff;
@@ -62,6 +67,8 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     background-color: black;
+    color: white;
+    font-size: 18px;
 }
 .footer {
   position: absolute;
@@ -70,3 +77,76 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+a.nav-link {
+    font-size: 20px;
+}
+
+    a.nav-link:hover {
+        color: dodgerblue !important;
+        text-decoration: underline;
+    }
+
+/* Flash Card css */
+.flip_container {
+    width: 100%;
+    height: 250px;
+    cursor: pointer;
+}
+
+
+.flip {
+    -webkit-transition: 0.75s;
+    transition: 0.75s;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    position: relative;
+    height: 100%;
+}
+
+.flip-counter {
+    -webkit-transition: 0.75s;
+    transition: 0.75s;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    position: relative;
+    height: 100%;
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.flip_front,
+.flip_back {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.flip_front {
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+}
+
+.flip_back {
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    /*
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 95%;
+    border-radius: 5px;
+        */
+}
+
+/* End of Flash Card css */
+
+
+
+
+
+
