--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-toggleable-md navbar-dark bg-dark border-bottom mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Run-time Analyzer</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Run-time Analyzer</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="FlashCards">FlashCards</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="FlashCards">Flash Cards</a>
                         </li>
                     </ul>
                 </div>
