Make navbar links white

--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="About">About</a>
+                            <a class="nav-link text-light" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="FlashCards">Flash Cards</a>
+                            <a class="nav-link text-light" asp-controller="Home" asp-action="FlashCards">Flash Cards</a>
                         </li>
                     </ul>
                 </div>
