create FlashCardBorder css class and replace the current flash card background with it

--- a/DataStructureTesting/Views/Home/FlashCards.cshtml
+++ b/DataStructureTesting/Views/Home/FlashCards.cshtml
@@ -15,14 +15,14 @@
         <div id="whole-card" class="flip m-0 p-0">
             <div class="flip_front w-100">
                 <div class="card">
-                    <div class="text-center card-body bg-primary">
+                    <div class="text-center card-body FlashCardBorder">
                         <textarea readonly id="cardBody" rows="6" class="form-control text-center" style="display: block; height: 100%; font-size:x-large;">@FlashCards.Cards[0].Item1</textarea>
                     </div>
                 </div>
             </div>
             <div class="flip_back w-100">
                 <div class="card">
-                    <div class="text-center card-body bg-primary">
+                    <div class="text-center card-body FlashCardBorder">
                         <textarea readonly id="cardAnswer" rows="6" class="form-control text-center" style="display: block; height: 100%; font-size:x-large;">@FlashCards.Cards[0].Item2</textarea>
                     </div>
                 </div>
