--- a/DataStructureTesting/wwwroot/css/site.css
+++ b/DataStructureTesting/wwwroot/css/site.css
@@ -37,6 +37,11 @@ a:hover {
         
 }
 
+.FlashCardBorder {
+    background: rgb(131,58,180);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(209,9,137,1) 19%, rgba(253,29,29,1) 55%, rgba(252,176,69,1) 100%);
+}
+
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
