--- a/DataStructureTesting/wwwroot/css/site.css
+++ b/DataStructureTesting/wwwroot/css/site.css
@@ -23,14 +23,15 @@ a:hover {
     }
 
 
-    /* edit buttons to be more professional*/
+/* Main button class stylings*/
 .btn-primary {
     
   color: white;
   background-color: purple;
   border-color: mediumpurple;
+  border-width: medium;
+  border-radius: 15px;
 }
-/* effects that occur whenever a user hovers over a flashcard*/
     .btn-primary:hover {
         background-color: mediumpurple;
         border-color: purple;
@@ -38,8 +39,13 @@ a:hover {
     }
 
     .btn-primary:active {
-        box-shadow: 0 0 0 0.2rem rgba(255,21,250,1) !important;
         background-color: mediumpurple !important;
+        transform: translate(0px, 2px);
+    }
+
+    .btn-primary:focus, .btn-primary.focus {
+        box-shadow: 0 0 0 0.3rem rgba(30, 144, 255, 0.00) !important;
+        border-color: purple !important;
     }
 
 .FlashCardBorder {
