--- a/DataStructureTesting/wwwroot/css/site.css
+++ b/DataStructureTesting/wwwroot/css/site.css
@@ -17,11 +17,6 @@ a:hover {
     text-decoration: underline;
 }
 
-    a:hover {
-        color: dodgerblue;
-        text-decoration: underline;
-    }
-
 
 /* Main button class stylings*/
 .btn-primary {
@@ -58,6 +53,7 @@ a:hover {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -108,11 +104,27 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+h3 {
+    color: cyan;
+    font-family: 'Malgun Gothic';
+}
+
+i.icon {
+    color: mediumpurple !important;
+}
+i.icon:hover {
+    color: rgba(255,21,250,1) !important;
+}
+
+.card {
+    border-radius: 15px !important;
+}
+
 a.nav-link {
     font-size: 20px;
 }
     a.nav-link:hover {
-        color: dodgerblue !important;
+        color: rgba(255,21,250,1) !important;
         text-decoration: underline;
     }
 
