--- a/DataStructureTesting/Views/Home/Index.cshtml
+++ b/DataStructureTesting/Views/Home/Index.cshtml
@@ -1,9 +1,107 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="row">
-    <div class="col-12 text-center">
-        <h1 class="display-4 text-white">Welcome</h1>
+<br />
+<br />
+<!-- Visible for medium and above -->
+<div class="d-none d-md-block">
+    <div class="row">
+        <div class="col-5 offset-1">
+            <div class="card bg-dark border-white">
+                <h3 class="text-center mt-3"><b>Interactive</b></h3>
+                <a class="card-img-top text-center mt-3" asp-controller="Interactive" asp-action="Index"><i class="fa fa-hand-pointer-o fa-10x icon"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Choose from variety of data structures and perform operations specific to the selected option</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-5">
+            <div class="card bg-dark border-white">
+                <h3 class="text-center mt-3"><b>Flash Cards</b></h3>
+                <a class="card-img-top text-center mt-3" asp-controller="Home" asp-action="FlashCards"><i class="fa fa-sticky-note fa-10x icon"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Review time/space complexities of operations for each data structure in a flash card format</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-5 offset-1">
+            <div class="card bg-dark border-white">
+                <h3 class="text-center mt-3"><b>Discussion</b></h3>
+                <a class="card-img-top text-center mt-3" asp-controller="Discussion" asp-action="Index"><i class="fa fa-comments fa-10x icon"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">View/create user discussions pertaining to specific data structures/algorithms</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-5">
+            <div class="card bg-dark border-white">
+                <h3 class="text-center mt-3"><b>Help</b></h3>
+                <a class="card-img-top text-center mt-3" asp-controller="Home" asp-action="Help"><i class="fas fa-question-circle fa-10x icon"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Provides general guidelines and FAQ.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+</div>
+<!-- Visible for extra small and small -->
+<div class="d-md-none">
+    <div class="row">
+        <div class="col-12 col-sm-10 offset-sm-1">
+            <div class="card shadow">
+                <h4 class="text-center mt-3"><b>Record a Transaction</b></h4>
+                <a class="card-img-top text-center mt-3" asp-controller="Recording" asp-action="RecordTransaction"><i class="fas fa-file-signature fa-10x"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Document a financial event by utilizing double-entry bookkeeping.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-12 col-sm-10 offset-sm-1">
+            <div class="card shadow">
+                <h4 class="text-center mt-3"><b>Journal</b></h4>
+                <a class="card-img-top text-center mt-3" asp-controller="Recording" asp-action="Journal"><i class="fas fa-book fa-10x"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Overview of committed transactions with ability to edit/delete.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-12 col-sm-10 offset-sm-1">
+            <div class="card shadow">
+                <h4 class="text-center mt-3"><b>Balance Sheet</b></h4>
+                <a class="card-img-top text-center mt-3" asp-controller="Statement" asp-action="BalanceSheet"><i class="fas fa-file-alt fa-10x"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Generates a Balance Sheet from Ledger.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-12 col-sm-10 offset-sm-1">
+            <div class="card shadow">
+                <h4 class="text-center mt-3"><b>Help</b></h4>
+                <a class="card-img-top text-center mt-3" asp-controller="Home" asp-action="Help"><i class="fas fa-question-circle fa-10x"></i></a>
+                <div class="card-body">
+                    <p class="card-text text-center">Provides general guidelines and FAQ.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<br />
+<br />
+<br />
+<br />
