Add script to use font awesome icons

--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Runtime Analyzer</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://kit.fontawesome.com/8d4654250c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
