--- a/DataStructureTesting/Views/Shared/_Layout.cshtml
+++ b/DataStructureTesting/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <div class="navbar-collapse collapse d-md-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
